buildscript {
    repositories {
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath "io.qameta.allure:allure-gradle:2.8.1"
        classpath "jp.classmethod.aws:gradle-aws-plugin:0.3+"
    }
}

plugins {
    id 'java'
    id 'maven-publish'
    id 'checkstyle'
}

def version = [
        springframework: '5.1.7.RELEASE',
        slf4j          : '1.7.25',
        cucumber       : '4.7.0',
        logback        : '1.2.3'
]

repositories {
    mavenLocal()
    jcenter()
    mavenCentral()
    maven {
        url = uri('http://repo.maven.apache.org/maven2')
    }
}

checkstyle {
    toolVersion '8.2'
}

dependencies {
    implementation 'org.aspectj:aspectjweaver:1.9.4'
    implementation 'io.github.bonigarcia:webdrivermanager:3.6.1'
    compile 'org.seleniumhq.selenium:selenium-java:3.141.59'
    implementation 'io.rest-assured:rest-assured:4.2.0'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'log4j:log4j:1.2.17'
    implementation 'ru.yandex.qatools.htmlelements:htmlelements-java:1.20.0'
    implementation 'com.typesafe:config:1.3.4'
    implementation 'org.apache.logging.log4j:log4j-api:2.12.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.12.0'
    implementation 'ru.yandex.qatools.ashot:ashot:1.5.4'
    implementation 'org.slf4j:slf4j-api:1.7.26'
    implementation 'org.slf4j:slf4j-simple:1.7.26'
    implementation 'mysql:mysql-connector-java:8.0.17'
    implementation 'io.cucumber:cucumber-java:4.7.0'
    implementation 'io.cucumber:cucumber-testng:4.7.0'
    implementation 'net.masterthought:cucumber-reporting:4.8.0'
    testImplementation 'org.assertj:assertj-core:3.12.2'
    testImplementation 'io.cucumber:cucumber-junit:4.7.0'
    testImplementation 'org.testng:testng:7.0.0-beta7'
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompile 'io.cucumber:cucumber-java:4.7.0'
    testCompile 'io.cucumber:cucumber-junit:4.7.0'
}

group = 'com.sprng.boot'
version = '1.0-SNAPSHOT'
sourceCompatibility = '8'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useTestNG()
}

tasks.withType(Test) {
    jvmArgs '--enable-preview'
}
